--- a/public/css/select2-bootstrap.css
+++ b/public/css/select2-bootstrap.css
@@ -18,6 +18,13 @@
   padding: 0;
 }
 
+.close-modal {
+  display:none;
+}
+
+#game-req {
+  background-image: url("http://demo.qodeinteractive.com/bridge2/wp-content/uploads/2014/03/pixel.png");
+}
 /**
  * Adjust Select2 inputs to fit Bootstrap 3 default .form-control appearance.
  */
