--- a/public/css/rankster.css
+++ b/public/css/rankster.css
@@ -3,3 +3,8 @@
 .select2-result-list__avatar img { width: 100%; height: auto; border-radius: 2px; }
 .select2-result-list__meta { margin-left: 70px; }
 .select2-result-list__description { font-size: 13px; color: #777; margin-top: 4px; }
+
+.wid-u-info h4 {
+    white-space: nowrap;
+    overflow: hidden;
+}
