Hide "Add match" buttons for unauthorized player (or show alert) #10

--- a/public/css/rankster.css
+++ b/public/css/rankster.css
@@ -8,3 +8,7 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+#game-req, #game-replay {
+    background-image: url("http://demo.qodeinteractive.com/bridge2/wp-content/uploads/2014/03/pixel.png");
+}
